--- a/index.css
+++ b/index.css
@@ -299,6 +299,17 @@ form>div:nth-child(2)>div:nth-child(3)>button:hover{
 }
 
 
+.buttonload{
+  /* background-color: #FFFFFF; */
+  /* border: 1px solid #04AA6D;  */
+  color: white; 
+  /* padding: 12px 16px; */
+  font-size: 16px;
+  display: none;
+  justify-content: center;
+  align-items: center;
+} 
+
 
 
 
