fixed style bug for display effect of warning container

--- a/index.css
+++ b/index.css
@@ -201,9 +201,9 @@ form>div:nth-child(2)>div{
     display: flex;
 }
 /* all fields empty */
-#warning-container.all-fields-empty{
+/* #warning-container.all-fields-empty{
     display: flex;
-}
+} */
 /* .warning-message-text{
    
 } */
