--- a/index.css
+++ b/index.css
@@ -233,6 +233,30 @@ form>div:nth-child(2)>div{
     border-radius: 12px;
     animation: slide-down 0.5s ease;
 }
+
+.success-box{
+    /* border: 1px solid red; */
+    display: none;
+    position: absolute;
+    z-index: 10;
+    top: 0;
+    width: 100%;
+    padding: 0.5rem;
+    overflow: hidden;
+}
+.success-box-msg{
+    padding: 0.5rem;
+    font-weight: 300;
+    border: 1px solid green;
+    color: var(--success);
+    background-color: rgba(0, 128, 0, 0.115);
+    border-radius: 12px;
+    animation: slide-down 0.5s ease;
+}
+
+
+
+
 @keyframes slide-down {
     0%{
         transform: translateY(-1000px);
